k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bayarea-nginx
  namespace: bayarea-web
  labels:
    app: bayarea-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bayarea-nginx
  template:
    metadata:
      labels:
        app: bayarea-nginx
    spec:
      serviceAccountName: bayarea-web-sa
      containers:
        - name: nginx
          image: 248189947068.dkr.ecr.us-east-1.amazonaws.com/bayarea-nginx-prod:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bayarea-nginx
  namespace: bayarea-web
spec:
  selector:
    app: bayarea-nginx
  ports:
    - port: 80
      targetPort: 80
