k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bayarea-ingress
  namespace: bayarea-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: bayarea.dataiesb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bayarea-nginx
                port:
                  number: 80
